--- a/doc/sprawozdanie.tex
+++ b/doc/sprawozdanie.tex
@@ -118,16 +118,13 @@ Wszystkie rozważane pojazdy mają taki same parametry techniczne i~osiągi, w~z
 
 Zatem postawiony problem składa się z~kilku zagadnień - należy zoptymalizować politykę doboru kierunku poruszania się gracza oraz używania nitro tak, aby przejechać całą trasę bez żadnego zderzenia, a~jednocześnie jak najszybciej, pozostawiając rywali za sobą. Zadania te w~pewnym stopniu konfliktują ze sobą, gdyż optymalną strategią w~celu uniknięcia zderzeń jest stanie w~miejscu, natomiast dążenie do uzyskania optymalnego czasu przejazdu powoduje wzrost ryzyka zderzenia z~przeszkodą lub innym pojazdem.
 
-%Cel projektu
 
 \subsection{Stan wiedzy}
 
 Omawiany problem reprezentuje zagadnienie kontroli w~ciągłej przestrzeni stanów. Istnieje kilka sposobów rozwiązywania tego typu problemów. Do czołowych algorytmów w~tej dziedzinie należą obecnie zarówno metody on-policy, jak i~off policy. W~niniejszej pracy w~kontekście omawianego zadania przetestowano dwie stosunkowo młode metody, ale znacznie różniące się metody: PPO oraz SAC.
 
-%Krótkie omówienie „stanu techniki”–czy jest jakiś benchmark do porównania?To może być 1-2 zdania
-
 \subsection{Użyte technologie}
-Prezentowane rozwiązanie zostało wykonane w silniku Unity w wersji 2019.4.11f1. Wykorzystano również framework ml-agents odpowiedzialny za proces uczenia agentów.
+Prezentowane rozwiązanie zostało wykonane w silniku Unity w wersji 2019.4.11f1. Wykorzystano również framework ml-agents w wersji 0.21.1, odpowiedzialny za proces uczenia agentów.
 
 \subsection{PPO}
 Proximal Policy Optimization, czyli PPO to nowa metoda, wprowadzona w~2017 roku. Wykorzystuje ona metodę aktor- krytyk, posługując się dwoma sieciami neuronowymi. Aktor jest reprezentowany przez sieć neuronową, która wykonuje zadanie klasyfikacji, wybierając, jaką akcję podjąć przy obserwowanym stanie środowiska. Krytyk to druga sieć, o~podobnej strukturze, która uczy się oceniać, czy poszczególne akcje poprawiają, czy pogarszają stan. Krytyk zwraca Q-wartość akcji wybranej w~poprzednim stanie. Na tej podstawie aktor modyfikuje swoją politykę, dbając, by nie przeprowadzić zbyt dużych zmian.
@@ -213,7 +210,7 @@ SAC używa trzech sieci neuronowych:
 Sieć V jest uczona tak, aby zminimalizować błąd  kwadratowy pomiędzy predykcją wartości zwracanej przez sieć a wartością oczekiwaną sumy funkcji Q i~entropii:
 
 \begin{equation}
-J_V(\psi) = \mathbb{E}_{s_t \sim D}\Big[ \frac{1}{2}\big(V_\psi(s_t) - \mathbb{E}_{a_t ~\pi_\phi} [Q_\theta(s_t,a_t) - log \pi_\phi (a_t|s_t)] \big)^2\Big]
+J_V(\psi) = \mathbb{E}_{s_t \sim D}\Big[ \frac{1}{2}\big(V_\psi(s_t) - \mathbb{E}_{a_t \sim\pi_\phi} [Q_\theta(s_t,a_t) - log \pi_\phi (a_t|s_t)] \big)^2\Big]
 \end{equation}
 
 Sieć Q minimalizuje błąd średniokwadratowy pomiędzy predykcją funkcji Q a natychmiastową nagrodą zsumowaną ze zdyskontowaną predykcją wartości następnego stanu.
@@ -364,7 +361,7 @@ W~przypadku algorytmu SAC badano wpływ na wyniki początkowego ustawienia warto
 \section{Obserwacje}
 
 \subsection{Entropia}
-Podczas analizy wyników zaobserwowano istotną różnice między metodami uczenia PPO i SAC. Wykres ukazujący aminy entropii został ukazany na rysunku \ref{pic:entropy}. Dla przejrzystości zamieszczono 4 krzywe - 2 górne odpowiadają pewnym modelom metody PPO, a 2 dolne -- SAC. Zgodnie z teoretycznymi założeniami, entropia w procesie uczenia dla PPO zmniejsza się wolniej i stabilniej. 
+Podczas analizy wyników zaobserwowano istotną różnice między metodami uczenia PPO i SAC. Wykres ukazujący zmiany entropii został ukazany na rysunku \ref{pic:entropy}. Dla przejrzystości zamieszczono 4 krzywe - 2 górne odpowiadają pewnym modelom metody PPO, a 2 dolne -- SAC. Zgodnie z teoretycznymi założeniami, entropia w procesie uczenia dla PPO zmniejsza się wolniej i stabilniej. 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{entropy}
@@ -373,7 +370,7 @@ Podczas analizy wyników zaobserwowano istotną różnice między metodami uczen
 \end{figure}
 
 \subsection{Szybkość ukończenia wyścigu}
-Po przeprowadzeniu testów zauważono również, że mimo delikatnej tendencji spadkowej, średnie czasy ukończenia wyścigów w trakcie uczenia nie zmieniają się znacznie, co ukazano na wykresie z rysunku \ref{pic:szybkosc}. To oznacza, że agenci wraz z procesem uczenia nie uczą się przejeżdżać toru szybciej, a jedynie skuteczniej omijać przeszkody, co daje im dłuższy czas życia.
+Po przeprowadzeniu testów zauważono również, że mimo delikatnej tendencji spadkowej, średnie czasy ukończenia wyścigów w trakcie uczenia nie zmieniają się znacznie, co ukazano na wykresie z rysunku \ref{pic:szybkosc}. To oznacza, że agenci wraz z procesem uczenia nie uczą się przejeżdżać toru szybciej, a~jedynie skuteczniej omijać przeszkody, co daje im dłuższy czas życia.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{szybkosc}
@@ -392,11 +389,11 @@ Długość epizodów uczenia w przypadku obu metod jednoznacznie rośnie, co ró
 
 
 \section{Wnioski}
-Analizując wszystkie wyniki eksperymentów, zauważono że polityki utworzone metodą PPO, mimo że uzyskiwały niższe wyniki na torach, to relatywnie lepiej odnajdywały się w nowym środowisku - miały wyższą miarę $u$. Zdaje się, że agenci korzystający z polityk metody PPO ostrożniej zachowywali się na zakrętach, unikając w ten sposób kolizji z przeszkodami. W obu przypadkach agenci podejmowali dobre decyzje w stałych fragmentach, tj. używali nitro na prostych odcinkach oraz modyfikowali tor jazdy, gdy w zakresie widzenia pojawiały się przeszkody.
+Analizując wszystkie wyniki eksperymentów, zauważono że polityki utworzone metodą PPO, mimo że uzyskiwały niższe wyniki na torach, to relatywnie lepiej odnajdywały się w nowym środowisku - miały wyższą miarę $u$. Zdaje się, że agenci korzystający z polityk metody PPO ostrożniej zachowywali się na zakrętach, unikając w ten sposób kolizji z przeszkodami. W~obu przypadkach agenci podejmowali dobre decyzje w stałych fragmentach, tj. używali nitro na prostych odcinkach oraz modyfikowali tor jazdy, gdy w~zakresie widzenia pojawiały się przeszkody.
 
 Kluczowe w kontekście narzucenia dobrego rytmu uczenia agentom było nagradzanie agentów za osiąganie kolejnych punktów kontrolnych (co wykazano w fazie pierwszej testów). Ponadto, dostosowując parametry obu metod w drugiej fazie testów można istotnie wpłynąć na proces uczenia, co przełoży się na widocznie inne polityki. Co za tym idzie, warto dostosowywać hiperparametry różnych metod, by uzyskane wyniki były jak najbardziej optymalne.
 
-Po ukończeniu eksperymentów, ustawiono 4 najlepsze modele agentów (2 dla PPO i 2 dla SAC) do wspólnego wyścigu. Wyuczone polityki agentów pozwoliły na przeprowadzenie wyrównanych i niejednoznacznych rozgrywek. Potwierdziły się wnioski związane z dysproporcją miar $k$ i $u$ dla obu metod. Na znanym torze metoda SAC sprawdzała lepiej -- agenci korzystający z polityki wyuczonej metodą SAC jeździli ryzykowniej torze i lepiej wykorzystywali swoje nitro. Z kolei w nowym środowisku lepiej wypadały odpowiedniki metody PPO -- zachowywały ostrożność w nieznanych 
+Po ukończeniu eksperymentów, ustawiono 4 najlepsze modele agentów (2 dla PPO i 2 dla SAC) do wspólnego wyścigu. Wyuczone polityki agentów pozwoliły na przeprowadzenie wyrównanych i niejednoznacznych rozgrywek. Potwierdziły się wnioski związane z dysproporcją miar $k$ i $u$ dla obu metod. Na znanym torze metoda SAC sprawdzała lepiej -- agenci korzystający z polityki wyuczonej metodą SAC jeździli ryzykowniej i lepiej wykorzystywali swoje nitro. Z kolei w nowym środowisku lepiej wypadali agenci uczeni metodą PPO -- zachowywali ostrożność w nieznanych elementach toru.
 
 \begin{thebibliography}{20}
 	\bibitem[1]{kumar}Kumar V., \textit{Soft Actor-Critic Demystified}, \url{https://towardsdatascience.com/soft-actor-critic-demystified-b8427df61665}. 2019.
